--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "keywords": [],
   "author": "",
