--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "css-tooltip",
   "version": "1.0.0",
-  "description": "",
+  "description": "Only CSS lightweight and simple tooltips",
   "main": "index.js",
   "postcss": {
     "parser": "sugarss",
