--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "description": "Only CSS lightweight and simple tooltips",
   "main": "index.js",
+  "browserslist": [
+    "> 1%",
+    "last 1 version",
+    "Firefox ESR",
+    "not dead"
+  ],
   "postcss": {
     "parser": "sugarss",
     "map": false,
@@ -25,6 +31,6 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
-    "postcss-nested": "^4.1.2"
+    "gulp-sass": "^4.0.2"
   }
 }
