--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     }
   },
   "scripts": {
-    "build": "gulp build",
+    "build": "rm -rf dist && gulp build",
     "watch": "gulp watch"
   },
   "keywords": [],
