format generated output files

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "parser": "sugarss",
     "map": false,
     "plugins": {
-      "postcss-nested": {},
       "autoprefixer": {},
       "cssnano": {}
     }
@@ -31,6 +30,7 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.12.0"
   }
 }
